tests/03-typecheck/07-stack-loop.ref
tests/03-typecheck/07-stack-loop.stack:2:5, Semantic error: stack mismatch while expects (..., int) but pool gives (..., int, string)
