tests/03-typecheck/07-stack-loop.stack
func loop_test (int) (int) in
    while
        dup 1 > loop
        1 +

        "hello"
    pool
end
